--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,12 @@
 .navbar{
-    border: 2px dashed yellow;
     height: 80px;
     background-color: #2c3e50;
+}
+
+.navbar a{
+    text-decoration: none;
+    color: white;
+    padding: 0 10px;
 }
 
 .jumbotron{
