--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@
     min-height: 600px;
 }
 
+.jumbotron .border{
+    border: 2px solid white;
+}
+
 section{
     min-height: 600px;
     border: 2px dashed violet;
