--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/* NAVBAR*/
+
 .navbar{
     height: 80px;
     background-color: #2c3e50;
@@ -9,6 +11,8 @@
     padding: 0 10px;
 }
 
+/*JUMBOTRON*/
+
 .jumbotron{
     background-color: #1abc9c;
 }
@@ -19,18 +23,5 @@
 
 .jumbotron img{
     width: 100%;
-}
-
-section{
-    min-height: 600px;
-    border: 2px dashed violet;
-}
-
-.row{
-    border: 2px dashed blue;
-}
-
-[class^="col"] {
-    border: 2px dashed black;
 }
   
