--- a/css/style.css
+++ b/css/style.css
@@ -30,3 +30,20 @@
 #about{
     background-color: #1abc9c;
 }
+
+/* CONTACT ME SECTION*/
+
+#contacts textarea{
+    width: 100%;
+    height: 200px;
+}
+
+#contacts .form-control{
+    border-radius: 0;
+    border-width: 0 0 1px 0;
+    box-shadow: none;
+}
+
+#contacts ::placeholder{
+    color: black;
+}
